[package]
name = "sequential_gen"
description = "A simple sequential generator."
version = "0.1.0"
edition = "2021"
authors = ["Clement Wanjau <clementwanjau@gmail.com>"]
repository = "https://github.com/clementwanjau/sequential_gen"
license = "MIT"
keywords = ["sequential-generator", "sequential", "generator", "rust"]

[features]
default = ["lazy_static/spin"]
no_std = ["lazy_static/spin_no_std"] # Enables the use of the crate without the standard library.

[dependencies]
lazy_static = { version = "1.5.0" }
